--- a/package.json
+++ b/package.json
@@ -15,10 +15,19 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "postcss-load-config": "^4.0.1",
+    "prisma": "^4.7.0",
     "svelte": "^3.53.1",
     "svelte-preprocess": "^4.10.7",
     "tailwindcss": "^3.2.4",
     "vite": "^3.2.4"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@prisma/client": "4.7.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tinymce/tinymce-svelte": "^1.0.0",
+    "axios": "^1.2.0",
+    "qs": "^6.11.0",
+    "svelte-select": "^4.4.7"
+  }
 }
